feat: adiciona contador de oferta no MobileSummary
- Implementa timer de oferta por tempo limitado no mobile
- Adiciona estados visuais de urgência (calm/warning/urgent)
- Usa ícone Clock do Lucide React em vez de emoji
- Integra timer contextualmente com métodos de pagamento
- Adiciona animação de pulsação no estado urgente
- Remove linha de benefício PIX para layout mais limpo
- Atualiza hook useCountdown para incluir totalSecondsLeft
- Mantém acessibilidade com aria-live e tooltips

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "test": "jest --runInBand --verbose",
+    "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --runInBand --detectOpenHandles"
